Updates to NoticeOfChangeFieldsTask to set representative id when it is empty, set role field of representative and set representative id field of respondent.